--- a/css/style_pagesecond_desktop.css
+++ b/css/style_pagesecond_desktop.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 992px) {
 
 .mobile {
     display: none;
@@ -9,93 +9,60 @@
 }
 
 .home-front-selects {
-    width: 61%;
-    height: 60px;
-    margin-left: -1%;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-}
+    padding: 20px 0;
+  }
 
-.home-front-selects-items {
-    width: 100%;
+  .home-front-selects-items {
     position: relative;
     display: flex;
-    flex-direction: row;
     align-items: center;
     border-right: 1px solid var(--c-line);
-}
+    width: 33%;
+    justify-content: space-around;
+  }
 
-.home-front-selects-items:last-child {
+  .home-front-selects-items:last-child {
     border-right: none;
-}
+  }
 
-.left {
-    justify-content: flex-start;
-    margin-left: 20px;
-}
-
-.middle {
-    justify-content: center;
-}
-
-.right {
-    justify-content: flex-end;
-}
-
-.home-front-selects-items-img {
+  .home-front-selects-items-img {
     width: 30px;
     height: 25px;
-}
+  }
 
-.home-front-selects-items-item {
-    margin-left: 4%;
-    width: 75%;
-    height: 22px;
+  .home-front-selects-items-item {
     background-color: var(--c-lightGrey);
     border: 1px solid var(--c-lightGrey);
     font-weight: 600;
     font-size: 20px;
-    line-height: 27px;
-    overflow: hidden;
-}
+  }
 
-.home-front-selects-items-menu {
+  .home-front-selects-items-menu {
     position: absolute;
-    top: 30px;
+    top: 49px;
     right: 0px;
-    width: 370px;
-    height: 245px;
     background-color: var(--c-yellow);
     z-index: 1;
     display: flex;
     flex-direction: column;
-    padding: 20px 15px 20px 15px;
-}
+    padding: 20px 15px;
+  }
 
-.home-front-selects-items-menu-item {
-    width: 340px;
-    height: 36px;
+  .home-front-selects-items-menu-item {
     font-weight: 600;
     font-size: 15px;
     line-height: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
+    padding: 7px 0;
+  }
 /*------------------*/
 
-.pagesecond-front {
-}
-
-.pagesecond-front-main {
-    align-items: flex-start;
-    width: 61%;
-}
-
 .pagesecond-front-main-title {
-    width: 100%;
     max-width: 770px;
     margin-top: 60px;
     font-weight: 800;
@@ -113,12 +80,11 @@
 }
 
 .pagesecond-front-main-container {
-    width: 100%;
     flex-direction: row;
+    overflow: unset;
 }
 
 .pagesecond-front-main-foto {
-    width: 66%;
     height: 435px;
     background-image: url(../image/pagesecond/video1.png);
 }
@@ -126,89 +92,63 @@
 .pagesecond-front-main-items {
     display: flex;
     flex-direction: column;
-    margin-left: 2.6%;
-    width: 31.4%;
+    margin-left: 29px;
     height: 435px;
     margin-top: 0;
 }
 
-.pagesecond-front-main-item-container {
-    width: 100%;
-}
-
 .pagesecond-front-main-item-first,
 .pagesecond-front-main-item-second {
-    width: 100%;
-    height: 105px;
     margin-right: 0;
     margin-bottom: 13px;
 }
 
 .pagesecond-front-main-item-third {
-    width: 100%;
     margin-right: 0;
     margin-bottom: 13px;
-    height: 85px;
 }
 
 .pagesecond-front-main-item-fourth {
-    width: 100%;
     margin-right: 0;
     margin-bottom: 15px;
-    height: 100px;
+    padding: 16px 16px 12px 16px;
 }
 
 .pagesecond-front-main-item-title {
-    /*display: flex;*/
     flex-direction: row;
-    width: 92%;
-    height: 30px;
-    margin-bottom: 8px;
-    overflow: hidden;
+    margin-bottom: 9px;
 }
 
 .pagesecond-front-main-item-title-third{
     flex-direction: row;
-    width: 92%;
-    height: 30px;
-    margin-bottom: 8px;
-    overflow: hidden;
+    margin-bottom: 9px;
 }
 
 .pagesecond-front-main-item-title-fourth{
     flex-direction: row;
-    width: 92%;
-    height: 48px;
-    margin-bottom: 8px;
-    overflow: hidden;    
     margin-bottom: 4px;
 }
 
-/*.pagesecond-front-main-item-third>.pagesecond-front-main-item-title{
-    height: 85px;
-    margin-bottom: 4px;
-}*/
-
 .pagesecond-front-main-item-img {
-   margin-right: 4%;
+   margin-right: 14px;
+   width: 28px;
 }
 
 .pagesecond-front-main-item-title-cont>h3 {
     font-size: 20px;
     line-height: 27px;
     margin: 0;
-    width: 300px;
+    width: 296px;
 }
 
 .pagesecond-front-main-item-text,
 .pagesecond-front-main-item-text-third,
 .pagesecond-front-main-item-text-fourth {
-    width: 92%;
+    width: 338px;
     height: 40px;
     font-size: 15px;
     line-height: 20px;
     margin: 0;
-    overflow: hidden;
 }
 
 .pagesecond-front-main-item-text-third,
@@ -217,7 +157,6 @@
 }
 
 .pagesecond-front-main-law {
-    width: 100%;
     margin-top: 40px;
     align-items: flex-start;
 }
@@ -251,11 +190,6 @@
 
 .pagesecond-helper {
     margin-top: 60px;
-    width: 100%;
-}
-
-.pagesecond-helper-container {
-    width: 61%;
 }
 
 .pagesecond-helper-container>h1 {
@@ -283,8 +217,6 @@
 
 .pagesecond-helper-items-item-text {
     width: 92%;
-   /* display: flex;
-    flex-direction: column;*/
     justify-content: space-between;
 }
 
@@ -319,12 +251,6 @@
 
 .pagesecond-form {
     margin-top: 60px;
-    width: 100%;
-}
-
-.pagesecond-front-form {
-    width: 61%;
-    align-items: flex-start;
 }
 
 .pagesecond-front-form-title {
@@ -381,20 +307,6 @@ textarea::placeholder, input::placeholder {
 
 /*--------------*/
 
-.pagesecond-stages {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: var(--c-button);
-}
-
-.pagesecond-stages-container {
-    width: 61%;
-    display: flex;
-    flex-direction: column;
-}
-
 .pagesecond-stages-container>h1 {
     font-weight: 800;
     font-size: 24px;
@@ -445,11 +357,10 @@ textarea::placeholder, input::placeholder {
 /*----------------*/
 
 .pagesecond-practice {
-    width: 100%;
+    overflow: unset;
 }
 
 .pagesecond-practice-container {
-    width: 61%;
     margin-top: 60px;
 }
 
@@ -495,27 +406,20 @@ textarea::placeholder, input::placeholder {
     height: 255px;
 }
 
-
 /*-------------*/
 
 .pagesecond-others-container {
     margin-top: 28px;
-    width: 100%;
     align-items: flex-start;
 }
 
 .pagesecond-others-container {
-    width: 61%;
     flex-direction: row;
 }
 
 .pagesecond-others-container-first {
     width: 27.4%;
     margin-right: 2.6%;
-}
-
-.pagesecond-others-first-items {
-    width: 100%;
 }
 
 .pagesecond-others-first-items-title {
@@ -567,16 +471,10 @@ textarea::placeholder, input::placeholder {
 /*-------------*/
 
 .pagesecond-consultation {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin-top: 60px;
 }
 
 .pagesecond-consultation-container {
-    width: 61%;
-    align-items: flex-start;
     margin-bottom: 60px;
 }
 
