--- a/css/style_root.css
+++ b/css/style_root.css
@@ -27,12 +27,11 @@
 }
 
 body {
-    box-sizing: border-box;
     font-family: var(--font-main);
     font-weight: var(--font-weight-main);
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
     background-color: var(--c-lightGrey);
     margin: 0;
   } 
@@ -47,4 +46,19 @@ body {
 
 .nonactive {
     display: none;
+}
+
+*{
+    box-sizing: border-box;
+}
+
+
+.container{
+    padding: 0 10px;
+}
+@media only screen and (min-width: 992px) {
+    .container{
+    max-width: 1170px;
+    margin: 0 auto;
+    }
 }
